# smsh

./: Cargo.toml  README.md  direction  todo
doc/: conditional.md  errors  expansion.md  file.md  intro.md  introduction.md  keywords.md  modules.md  notes  redirections.md  replacement.md  scopes.md  shell-arithmetic.md  shell-constructs.md  string-manipulation.md  user-functions.md
doc/advanced-scripting-guide/: README.md
src/: builtins.rs  constructs.rs  line.rs  main.rs  shell.rs  source.rs
src/constructs/: mod.rs
src/line/: expansion.rs  mod.rs  pipeline.rs  word.rs
src/line/token/: expansion.rs  mod.rs  selection.rs
src/line/word/: expansion.rs  mod.rs  selection.rs  separation.rs
src/shell/: constructs.rs  init.rs  mod.rs  state.rs
src/shell/modules/: core.rs  mod.rs
src/sources/: basic_tty.rs  for.rs  line_validator.rs  mod.rs  script.rs  subshell.rs  tty.rs  user_function.rs  while.rs
src/sources/tty/: completer.rs  line_validator.rs  mod.rs
