[package]
name = "smsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nix = "0.23.0"
xdg = "^2.1"
crossterm = "0.25.0"
reedline = "0.11.0"
unicode-segmentation = "1.8.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
rstest = "0.11.0"
